# BezierPatchWindowRelease

./: .gitignore
BezierPatchWindowRelease/: .gitignore  ArcBall.h  ArcBallWidget.h  BezierPatchRenderWidget.cpp  BezierPatchRenderWidget.h  BezierPatchWindowRelease  BezierPatchWindowRelease.pro  ControlPoints.cpp  ControlPoints.h  Homogeneous4.cpp  Homogeneous4.h  Matrix4.cpp  Matrix4.h  Point3.cpp  Point3.h  Quaternion.cpp  Quaternion.h  RGBAImage.cpp  RGBAImage.h  RGBAValue.cpp  RGBAValue.h  RenderController.cpp  RenderController.h  RenderParameters.h  RenderWidget.cpp  RenderWidget.h  RenderWindow.cpp  RenderWindow.h  Vector3.cpp  Vector3.h  main.cpp  readme.txt
input/: patch.txt
testLibrary/: CMakeLists.txt  Homogeneous4.cpp  Homogeneous4.h  Makefile  Vector3.cpp  main.cpp  testLibrary
